--- a/cbsvr/提币回调接口.md
+++ b/cbsvr/提币回调接口.md
@@ -62,10 +62,10 @@
 
 ```json
 {
-    "cryptype": 0,  // 0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0
+    "cryptype": 0,  
     "data": {
-        "ok": 1,   // 
-        "msg": "", // 
+        "ok": 1,  
+        "msg": "",
     }
 }
 ```
