--- a/cbsvr/充值回调接口.md
+++ b/cbsvr/充值回调接口.md
@@ -7,7 +7,7 @@
 |appid     |string |用户身份ID, 一个唯一的随机字符串                            |   
 |cryptype  |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0 | 
 |token     |string |md5("appid_salt_userid_subuserid_timestamp_addr")       |
-|timestamp |int    |时间戳,单位秒                                             |
+|timestamp |int    |时间戳,单位秒          _``_                                   |
 |orderid   |int    |充值订单id                                               |
 |subuserid |string |调用端子账号，字符串，平台不管其含义                         |
 |chain     |string |哪条主链上充值进来的                                       |
@@ -75,7 +75,7 @@
     "data": {
         "eno":  ,  
         "emsg": "",
-        "data": []
+        "data": {}
     }
 }
 ```
