更新文档接口

--- a/cbsvr/充值回调接口.md
+++ b/cbsvr/充值回调接口.md
@@ -29,12 +29,13 @@
             "token": "",  
             "timestamp": 1574151978     
         },    
-        "orderid": 12,                
-        "subuserid": "fafdafa",       
+        "id": 12,                
+        "subuserid": "1",       
         "chain": "eth",               
-        "coin": "usdt",               
-        "addr": "0xfadad",            
-        "txid": "0xdaafd",            
+        "coin": "usdt",
+        "from_addr": "xxxxxx",               
+        "addr": "xxxxxx",            
+        "txid": "xxxxxx",            
         "amount": 10,                 
         "balance": 20,                
         "time": "2019-09-25 10:00:00" 
