--- a/cbsvr/提币回调接口.md
+++ b/cbsvr/提币回调接口.md
@@ -15,12 +15,16 @@
 |addr         |string |提币目标地址                                              |
 |amount       |float  |提币数量                                                 |
 |amount_sent  |float  |实际发送数量                                               |
+|sub_balance  |float  |提币扣减数量                                                |
 |memo         |string |提币备注，比如用户ID之类的，可以是任意内容                     |
 |status       |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消  |
 |status_desc  |string |提币状态描述                                               |
 |txid         |string |交易ID                                                  |
+|attch_id     |int    |用户附加ID                                               |
 |fee_coin     |string |手续费币种                                               |
 |fee_amount   |float  |手续费数量                                               |
+|miner_coin   |string |矿工费币种                                               |
+|miner_amount |float  |矿工费数量                                               |
 |create_time  |string |订单创建时间                                              |
 
 ```json
@@ -34,19 +38,24 @@
             "token": "", 
             "timestamp": 1574151978     
         },
-        "withdrawid": 23,     
-        "subuserid": "fafafa", 
+        "id": 23,     
+        "subuserid": "1", 
         "chain": "eth",         
-        "coin": "usdt",         
-        "addr": "0xfdafda",     
+        "coin": "usdt",  
+        "from_addr":"xxxxxx",       
+        "addr": "xxxxxx",     
         "amount": 10,           
         "amount_sent": 9,       
+        "sub_balance": 9,       
         "memo": "123",          
         "status": 0,            
         "status_desc": "",      
         "txid": "",                
         "fee_coin": "",            
         "fee_amount": 0,          
+        "attch_id": 124,      
+        "miner_coin": "",            
+        "miner_amount": 0,          
         "create_time": ""         
     }
 }
