接口文档更新字段

--- a/cbsvr/提币回调接口.md
+++ b/cbsvr/提币回调接口.md
@@ -8,24 +8,25 @@
 |cryptype     |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0 | 
 |token        |string |md5("appid_salt_userid_subuserid_timestamp_addr_memo")  |
 |timestamp    |int    |时间戳,单位秒                                             |
-|withdrawid   |int    |提币订单id                                               |
-|subuserid    |string |调用端子账号，字符串，平台不管其含义                         |
-|chain        |string |主链                                                    |
-|coin         |string |币名                                                    |
-|addr         |string |提币目标地址                                              |
-|amount       |float  |提币数量                                                 |
-|amount_sent  |float  |实际发送数量                                               |
-|sub_balance  |float  |提币扣减数量                                                |
-|memo         |string |提币备注，比如用户ID之类的，可以是任意内容                     |
-|status       |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消  |
-|status_desc  |string |提币状态描述                                               |
-|txid         |string |交易ID                                                  |
-|attch_id     |int    |用户附加ID                                               |
-|fee_coin     |string |手续费币种                                               |
-|fee_amount   |float  |手续费数量                                               |
-|miner_coin   |string |矿工费币种                                               |
-|miner_amount |float  |矿工费数量                                               |
-|create_time  |string |订单创建时间                                              |
+|id                    |int    |内部充值序号                                                     |
+|subuserid             |string |调用端子账号，字符串，平台不管其含义                                 |
+|chain                 |string |哪条主链上充值进来的                                              |
+|coin                  |string |币名                                                            |
+|from_addr             |string |发送地址                                                        |
+|addr                  |string |充值到哪个地址                                                   |
+|amount                |float  |充值数量                                                        |
+|amount_sent           |float  |实际发送的提币数量=(amount-fee_amount)                           |
+|sub_balance           |float  |扣减余额数量                                                    |
+|memo                  |string |提币备注，比如用户ID之类的，可以是任意内容                           |
+|status                |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消      |
+|status_desc           |string |提币状态说明                                                    |
+|txid                  |string |链上的交易ID                                                   |
+|attch_id              |int    |附加ID                                                        |
+|fee_coin              |string |手续费币种                                                     |
+|fee_amount            |float  |手续费数量                                                     |
+|miner_coin            |string |矿工费币种                                                     |
+|miner_amount          |float  |矿工费数量                                                     |
+|create_time           |string |订单创建时间                                                   |
 
 ```json
 字段值参考上表
