--- a/cbsvr/充值回调接口.md
+++ b/cbsvr/充值回调接口.md
@@ -8,15 +8,15 @@
 |cryptype  |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0 | 
 |token     |string |md5("appid_salt_userid_subuserid_timestamp_addr")       |
 |timestamp |int    |时间戳,单位秒          _``_                                   |
-|orderid   |int    |充值订单id                                               |
-|subuserid |string |调用端子账号，字符串，平台不管其含义                         |
-|chain     |string |哪条主链上充值进来的                                       |
-|coin      |string |充值的币名                                               |
-|addr      |string |充值到哪个地址                                            |
-|txid      |string |交易ID                                                  |
-|amount    |float  |充值数量                                                 |
-|balance   |float  |充值后余额                                               |
-|time      |string |到账时间                                                 |
+|id        |int    |内部充值序号                                                     |
+|subuserid |string |调用端子账号，字符串，平台不管其含义                                 |
+|chain     |string |哪条主链上充值进来的                                              |
+|coin      |string |币名                                                            |
+|from_addr |string |发送地址                                                        |
+|addr      |string |充值到哪个地址                                                   |
+|txid      |string |交易ID                                                         |
+|amount    |float  |充值数量                                                        |
+|balance   |float  |充值后余额                                                      |
 
 ```json
 字段值参考上表
