更新查询记录接口

--- a/cbsvr/充值回调接口.md
+++ b/cbsvr/充值回调接口.md
@@ -17,6 +17,7 @@
 |txid      |string |交易ID                                                         |
 |amount    |float  |充值数量                                                        |
 |balance   |float  |充值后余额                                                      |
+|time      |string |充值时间                                                        |
 
 ```json
 字段值参考上表
