--- a/cbsvr/提币回调接口.md
+++ b/cbsvr/提币回调接口.md
@@ -26,7 +26,7 @@
 |fee_amount            |float  |手续费数量                                                     |
 |miner_coin            |string |矿工费币种                                                     |
 |miner_amount          |float  |矿工费数量                                                     |
-|create_time           |string |订单创建时间                                                   |
+|time                  |string |订单创建时间                                                   |
 
 ```json
 字段值参考上表
@@ -57,7 +57,7 @@
         "attch_id": 124,      
         "miner_coin": "",            
         "miner_amount": 0,          
-        "create_time": ""         
+        "time": ""         
     }
 }
 ```
