修改attach_id为user_tags

--- a/cbsvr/提币回调接口.md
+++ b/cbsvr/提币回调接口.md
@@ -54,7 +54,7 @@
         "txid": "",                
         "fee_coin": "",            
         "fee_amount": 0,          
-        "attch_id": 124,      
+        "user_tags": "",      
         "miner_coin": "",            
         "miner_amount": 0,          
         "time": ""         
