--- a/cbsvr/提币回调接口.md
+++ b/cbsvr/提币回调接口.md
@@ -6,7 +6,7 @@
 | --               |--     | --                                                     |
 |appid             |string |用户身份ID, 一个唯一的随机字符串                             |   
 |cryptype          |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0  | 
-|token             |string |md5("appid_salt_userid_subuserid_timestamp_addr_memo")  |
+|token             |string |md5("appid_salt_userid_subuserid_timestamp_addr_memo_usertags")|
 |timestamp         |int    |时间戳,单位秒                                             |
 |id                |int    |内部序号                                              |
 |subuserid         |string |调用端子账号，字符串，平台不管其含义                          |
@@ -21,7 +21,7 @@
 |status            |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消 |
 |status_desc       |string |提币状态文字说明                                            |
 |txid              |string |交易ID                                                    |
-|user_tags         |string |用户标签，异常时确定订单使用                                  |
+|usertags          |string |用户标签，异常时确定订单使用                                  |
 |fee_coin          |string |手续费币种                                                 |
 |fee_amount        |float  |手续费数量                                                 |
 |miner_coin        |string |矿工费币种                                                 |
@@ -54,7 +54,7 @@
         "txid": "",                
         "fee_coin": "",            
         "fee_amount": 0,          
-        "user_tags": "",      
+        "usertags": "",      
         "miner_coin": "",            
         "miner_amount": 0,          
         "time": ""         
