提交新版接口文档

--- a/deposit/获取充值地址.md
+++ b/deposit/获取充值地址.md
@@ -10,11 +10,11 @@
 |timestamp|int    |时间戳,单位秒                                             |
 |chain    |string |主链                                                    |
 |coin     |string |币名                                                    |
-|subuserid|string |调用端子账号，字符串，平台不管其含义                         |
+|subuserid|string |调用端子账号，字符串，平台不管其含义                          |
+
+**字段值参考上表:**
 
 ```json
-字段值参考上表
-
 {
     "appid": "", 
     "cryptype": 0,
@@ -45,11 +45,11 @@
 |coin                  |string |币名                                                            |
 |subuserid             |string |调用端子账号，字符串，平台不管其含义                                 |
 |addr                  |string |充币地址                                                         |
-|needmemo              |int    |0:不需要，1需要，填写的memo字符串格式: "userid#subuserid#appid"     |
+|needmemo              |int    |0:不需要，1需要，填写的memo字符串格式: "userid|subuserid|appid"     |
+
+**字段值参考上表:**
 
 ```json
-字段值参考上表
-
 {
     "cryptype": 0, 
     "data": {
@@ -101,9 +101,9 @@
 |9002   |(name) not supported chain          |  不支持的链      |
 |10002  |(name) not positive int             |  不是一个正整数   | 
 
-```json
-字段值参考上表
+**字段值参考上表:**
 
+```json
 {
     "cryptype": 0,  
     "data" : {
