--- a/查询余额.md
+++ b/查询余额.md
@@ -11,9 +11,9 @@
 |chain    |string |主链                                                     |
 |coin     |string |币种                                                     |
 
-```json
-字段值参考上表
+**字段值参考上表:**
 
+```json
 {
     "appid": "",  
     "cryptype": 0,
@@ -22,10 +22,10 @@
             "token": "",
             "timestamp": 0
         },
-        "coins": [ 
+        "coins": [
             {
-                "chain":"eth",
-                "coin":"usdt"
+                "chain":"eth", 
+                "coin": "eth"
             }
         ]
     }
@@ -34,15 +34,15 @@
 
 **正常响应：**
 
-|参数      |类型   |说明                                                        |  
-| --      |--     | --                                                        |
-|cryptype  |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0    |   
-|eno       |int    |0是正常，非0对应下面错误返回列表中的错误码                       | 
-|emsg      |string |eno非0时对应下面错误返回列表中的错误描述                        |
-|chain     |string |主链                                                      |
-|coin      |string |币名                                                      |
-|balance   |float  |余额数量                                                   |
-|as_cny    |float  |余额以cnc为单位表示的数量                                    |
+|参数      |类型   |说明                                                                    |  
+| --      |--     | --                                                                    |
+|cryptype              |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0    |   
+|eno                   |int    |0是正常，非0对应下面错误返回列表中的错误码                       | 
+|emsg                  |string |eno非0时对应下面错误返回列表中的错误描述                        |
+|chain                 |string |主链                                                      |
+|coin                  |string |币名                                                      |
+|balance               |float  |余额数量                                                   |
+|as_cny                |float  |余额以cnc为单位表示的数量                                    |
 
 ``` json
 字段值参考上表
@@ -55,7 +55,7 @@
         "data": [
             {
                 "chain":"eth",
-                "coin": "usdt",  
+                "coin": "eth",  
                 "balance": 1,    
                 "as_cny": 7.15,  
             }
@@ -65,7 +65,6 @@
 ```
 
 **错误响应：(emsg中带有括号表示可能变动部分)**
-
 
 |eno    |emsg                                |  description    |
 | --    | --                                 |    --           |
@@ -94,10 +93,11 @@
 |6002   |(name) not a list                   |  不是列表类型     |
 |7002   |(name) cannot be empty              |  字段不能为空     |
 |8002   |(name) not supported coin           |  不支持的币种     |
+|9002   |(name) not supported chain          |  不支持的链      |
+
+**字段值参考上表**
 
 ```json
-字段值参考上表
-
 {
     "cryptype": 0,  
     "data" : {
@@ -107,3 +107,4 @@
     }
 }
 ```
+
