--- a/deposit/充值回调接口.md
+++ b/deposit/充值回调接口.md
@@ -7,21 +7,21 @@
 |appid     |string |用户身份ID, 一个唯一的随机字符串                            |   
 |cryptype  |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0 | 
 |token     |string |md5("appid_salt_userid_subuserid_timestamp_addr")       |
-|timestamp |int    |时间戳,单位秒          _``_                                   |
-|id        |int    |内部序号                                                     |
-|subuserid |string |调用端子账号，字符串，平台不管其含义                                 |
-|chain     |string |主链                                                         |
-|coin      |string |币名                                                            |
-|from_addr |string |发送地址                                                        |
-|addr      |string |接收地址                                                        |
-|txid      |string |交易ID                                                         |
-|amount    |float  |充值数量                                                        |
-|balance   |float  |充值后余额                                                      |
-|time      |string |充值时间                                                        |
+|timestamp |int    |时间戳,单位秒                                             |
+|id        |int    |订单id                                                  |
+|subuserid |string |调用端子账号，字符串，平台不管其含义                         |
+|chain     |string |主链                                                    |
+|coin      |string |币名                                                    |
+|from_addr |string |发送方地址                                               |
+|addr      |string |接收方地址                                               |
+|txid      |string |交易ID                                                  |
+|amount    |float  |充值数量                                                 |
+|balance   |float  |充值后余额                                               |
+|time      |string |到账时间                                                 |
+
+**字段值参考上表:**
 
 ```json
-字段值参考上表
-
 {
     "appid": "",
     "cryptype": 0,       
@@ -31,13 +31,13 @@
             "timestamp": 1574151978     
         },    
         "id": 12,                
-        "subuserid": "1",       
+        "subuserid": "admin",       
         "chain": "eth",               
-        "coin": "usdt",
-        "from_addr": "xxxxxx",               
-        "addr": "xxxxxx",            
-        "txid": "xxxxxx",            
-        "amount": 10,                 
+        "coin": "usdt",                    
+        "from_addr": "sender", 
+        "addr": "reciver",
+        "txid": "xxxxxxxxxxx",
+        "amount": 10,        
         "balance": 20,                
         "time": "2019-09-25 10:00:00" 
     }
