--- a/withdraw/提币预校验接口.md
+++ b/withdraw/提币预校验接口.md
@@ -1,4 +1,4 @@
-## [POST] /withdraw/submit.php
+## [POST] /withdraw/validator.php
 
 **请求：**
 
@@ -6,16 +6,17 @@
 | --      |--     | --                                                                |
 |appid    |string |用户身份ID, 一个唯一的随机字符串                                       |   
 |cryptype |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0            | 
-|token    |string |md5("appid_salt_userid_timestamp")                                 |
+|token    |string |md5("appid_salt_userid_timestamp")                                  |
 |timestamp|int    |时间戳,单位秒                                                        |
 |subuserid|string |调用端子账号，字符串，平台不管其含义                                     |
 |chain    |string |主链                                                                |
 |coin     |string |币名                                                                |
 |addr     |int    |提币目标地址                                                          |
 |amount   |float  |提币数量                                                             |
-|memo     |string |用户备注,内容自定义（会记录到区块链上）                                   |
+|memo     |string |提币备注，比如用户ID之类的，可以是任意内容                                |
 |usertags |string |用户标签，内容自定义 （不会记录到区块链上）                                |
 |sign     |string |提币请求签名, md5("appid_salt_userid_timestamp_addr_memo_usertags"),注意：如果字段为空，前面的下划线也应该去掉   |
+
 
 **字段值参考上表:**
 
@@ -35,39 +36,12 @@
         "amount": 10,  
         "memo": "test",
         "usertags": "my123",
-        "sign": "xxxxxxxx"   
+        "sign": "xxxxxxxx"    
     }
 }
 ```
 
-**注意： 扣减金额是提币数量(amount) + (手续费数量)fee_amount**
-
 **正常响应：**
-
-|参数      |类型   |说明                                                                         |  
-| --      |--     | --                                                                         |
-|cryptype              |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0         |   
-|eno                   |int    |0是正常，非0对应下面错误返回列表中的错误码                            | 
-|emsg                  |string |eno非0时对应下面错误返回列表中的错误描述                             |
-|id                    |int    |序号                                                            |
-|subuserid             |string |调用端子账号，字符串，平台不管其含义                                 |
-|chain                 |string |主链                                                            |
-|coin                  |string |币名                                                            |
-|from_addr             |string |提币发送地址                                                     |
-|addr                  |string |提币接收地址                                                     |
-|amount                |float  |提币数量                                                        |
-|amount_sent           |float  |实际发送的提币数量                                                |
-|sub_balance           |float  |扣减资金                                                        |
-|memo                  |string |提币备注，比如用户ID之类的，可以是任意内容                           |
-|status                |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消      |
-|status_desc           |string |状态描述                                                       |
-|txid                  |string |链上的交易ID                                                   |
-|fee_coin              |string |手续费币种                                                     |
-|fee_amount            |float  |手续费数量                                                     |
-|usertags              |string |用户标签                                                       |
-|time                  |string |订单创建时间                                                   |
-
-**字段值参考上表:**
 
 ```json
 {
@@ -75,25 +49,6 @@
     "data": {
         "eno":  0,  
         "emsg": "", 
-        "data": {
-            "id": 0,               
-            "subuserid": "",  
-            "chain": "",         
-            "coin": "",         
-            "from_addr": "",
-            "addr": "",
-            "amount": 10,           
-            "amount_sent": 10,       
-            "sub_balance": 20,
-            "memo": "",          
-            "status": 0,            
-            "status_desc": "",   
-            "txid": "",    
-            "fee_coin": "",         
-            "fee_amount": 0,
-            "usertags":"", 
-            "time":  ""      
-        }
     }
 }
 ```
@@ -135,16 +90,16 @@
 |12002  |(name) not positive float           |  不是一个正浮点数 |
 |16002  |(name) not float                    |  不是一个浮点型  |
 
-**字段值参考上表:**
+**字段值参考上表**
 
 ```json
 {
     "cryptype": 0,  
     "data" : {
-        "eno": "",          
-        "emsg": "", 
-        "data": {} 
+        "eno": 1001,          
+        "emsg": "错误信息"
     }
 }
 ```
 &nbsp;
+
