--- a/withdraw/查询提币记录.md
+++ b/withdraw/查询提币记录.md
@@ -15,8 +15,6 @@
 |limit    |int    |最多查询多少条记录，包含fromid这条记录                      |
 
 ```json
-字段值参考上表
-
 {
     "appid": "", 
     "cryptype": 0,       
@@ -26,8 +24,8 @@
             "timestamp": 1574151978    
         },
         "subuserid": "", 
-        "chain": "",      
-        "coin": "",      
+        "chain": "",
+        "coin": "",  
         "fromid": 12,   
         "limit": 100   
     }
@@ -36,35 +34,31 @@
 
 **正常响应:**
 
-|参数      |类型   |说明                                                              |  
-| --      |--     | --                                                              |
-|cryptype          |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0  |   
-|eno               |int    |0是正常，非0对应下面错误返回列表中的错误码                     | 
-|emsg              |string |eno非0时对应下面错误返回列表中的错误描述                       |
-|id                |int    |内部序号                                                 |
-|subuserid         |string |调用端子账号，字符串，平台不管其含义                          |
-|chain             |string |主链                                                    |
-|coin              |string |币名                                                    |
-|from_addr         |string |发送地址(发送方)                                          |
-|addr              |string |提币地址(接收方)                                           |
-|amount            |float  |提币数量                                                  |
-|amount_sent       |float  |实际发币数量                                               |
-|sub_balance       |float  |余额扣减数量                                               |
-|memo              |string |提币备注，可以是任意内容，一般备注用户id                       |
-|status            |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消 |
-|status_desc       |string |提币状态文字说明                                            |
-|txid              |string |交易ID                                                    |
-|usertags          |string |用户标签，异常时确定订单使用,回传                              |
-|fee_coin          |string |手续费币种                                                 |
-|fee_amount        |float  |手续费数量                                                 |
-|miner_coin        |string |矿工费币种                                                 |
-|miner_amount      |float  |矿工费数量                                                 |
-|time              |string |订单创建时间                                               |
+|参数      |类型   |说明                                                                         |  
+| --      |--     | --                                                                         |
+|cryptype              |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0         |   
+|eno                   |int    |0是正常，非0对应下面错误返回列表中的错误码                            | 
+|emsg                  |string |eno非0时对应下面错误返回列表中的错误描述                             |
+|id                    |int    |内部充值序号                                                     |
+|subuserid             |string |调用端子账号，字符串，平台不管其含义                                 |
+|chain                 |string |哪条主链上充值进来的                                              |
+|coin                  |string |币名                                                            |
+|from_addr             |string |提币发送地址                                                     |
+|addr                  |string |提币接收地址                                                     |
+|amount                |float  |充值数量                                                        |
+|amount_sent           |float  |实际发送的提币数量=(amount-fee_amount)                           |
+|sub_balance           |float  |扣减余额                                                        |
+|memo                  |string |提币备注，比如用户ID之类的，可以是任意内容                           |
+|status                |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消      |
+|status_desc           |string |状态描述                                                       |
+|txid                  |string |链上的交易ID                                                   |
+|fee_coin              |string |手续费币种                                                     |
+|fee_amount            |float  |手续费数量                                                     |
+|usertags              |string |用户标签                                                       |
+|time                  |string |订单创建时间                                                   |
 
 
 ```json
-字段值参考上表
-
 {
     "cryptype": 0,  
     "data": {
@@ -72,25 +66,23 @@
         "emsg": "", 
         "data": [
             {
-                "id": 23,     
-                "subuserid": "1", 
-                "chain": "eth",         
-                "coin": "usdt",  
-                "from_addr":"xxxxxx",       
-                "addr": "xxxxxx",     
+                "id": 23,               
+                "subuserid": "",  
+                "chain": "",         
+                "coin": "",    
+                "from_addr": "",
+                "addr": "",
                 "amount": 10,           
                 "amount_sent": 9,       
-                "sub_balance": 9,       
-                "memo": "123",          
+                "sub_balance": 19,       
+                "memo": "",          
                 "status": 0,            
-                "status_desc": "",      
-                "txid": "",                
-                "fee_coin": "",            
-                "fee_amount": 0,          
-                "usertags": "",      
-                "miner_coin": "",            
-                "miner_amount": 0,          
-                "time": ""     
+                "status_desc": "",
+                "txid":  "",
+                "fee_coin": "",         
+                "fee_amount": 0,        
+                "usertags":  "",  
+                "time": ""
             }
         ]          
     }
@@ -131,10 +123,9 @@
 |9002   |(name) not supported chain          |  不支持的链       |
 |10002  |(name) not positive int             |  不是一个正整数   |
 
+**字段值参考上表:**
 
 ```json
-字段值参考上表
-
 {
     "cryptype": 0,  
     "data" : {
