--- a/查询币种信息.md
+++ b/查询币种信息.md
@@ -2,6 +2,7 @@
 
 **请求：**
 
+
 |参数      |类型   |说明                                                     |  
 | --      |--     | --                                                     |
 |appid    |string |用户身份ID, 一个唯一的随机字符串                            |   
@@ -9,9 +10,9 @@
 |token    |string |md5("appid_salt_userid_timestamp")                      |
 |timestamp|int    |时间戳,单位秒                                             |
 
-```json
-字段值参考上表
+**字段值参考上表:**
 
+```json
 {
     "appid": "", 
     "cryptype": 0,
@@ -29,25 +30,25 @@
 |参数      |类型   |说明                                                                    |  
 | --      |--     | --                                                                    |
 |cryptype              |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0    |   
-|eno                   |int    |0是正常，其他错误码参见错误响应一栏                             | 
-|emsg                  |string |错误描述信息                                                |
+|eno                   |int    |0是正常，非0对应下面错误返回列表中的错误码                       | 
+|emsg                  |string |eno非0时对应下面错误返回列表中的错误描述                        |
 |chain                 |string |链名                                                      |
 |coin                  |string |币名                                                      |
-|coin_precision        |int    |币的精度                                                   |
+|coin_precision        |int    |币的精度,也就是该币支持多少位小数                              |
 |min_deposit_amount    |float  |最小充值数量                                                |
 |min_withdraw_amount   |float  |最小提币数量                                                |
 |deposit_enabled       |int    |充值是否启用: 1=启用,0=未启用                                 |
 |withdraw_enabled      |int    |提币是否启用: 1=启用,0=未启用                                 |
 |deposit_confirm_count |int    |充值入账确认数                                               |
-|fee_type              |int    |手续费类型: 0=固定数量,1=提币数量 * 比率,2=0、1类型混合          |
 |fee_coin              |string |手续费币种                                                  |
+|fee_type              |int    |手续费类型: 0=固定数量,1=费率,2=混合(withdraw_amt*rate+amount) |
 |fee_amount            |float  |固定手续费数量                                               |
 |fee_rate              |float  |手续费率                                                    |
-|need_memo             |int    |充值是否需要备注: 1=充值需要备注,0=充值不需要备注                |
+|need_memo             |int    |充值是否需要备注: 1=充值需要备注,0=充值不需要备注                 |
+
+**字段值参考上表:**
 
 ```json
-字段值参考上表
-
 {
     "cryptype": 0, 
     "data": {
@@ -58,13 +59,13 @@
                 "chain": "",
                 "coin": "", 
                 "coin_precision": 2, 
-                "min_deposit_amount": 0,
+                "min_deposit_amount":0,
                 "min_withdraw_amount": 0,
                 "deposit_enabled": 1,    
                 "withdraw_enabled": 1,   
                 "deposit_confirm_count": 3,
-                "fee_type": 0,    
                 "fee_coin": "",   
+                "fee_type": 0,    
                 "fee_amount": 0.1,  
                 "fee_rate": 0.001,
                 "need_memo": 1 
@@ -75,7 +76,6 @@
 ```
 
 **错误响应：(emsg中带有括号表示可能变动部分)**
-
 
 |eno    |emsg                                |  description    |
 | --    | --                                 |    --           |
@@ -97,9 +97,9 @@
 |10001  |token verifiy failed                |  token验证失败   |
 |11001  |appid is disabled                   |  appid未启用     |
 
-```json
-字段值参考上表
+**字段值参考上表:**
 
+```json
 {
     "cryptype": 0,  
     "data" : {
