接口文档把响应结构中的浮点型全部转换为字符串

--- a/deposit/充值回调接口.md
+++ b/deposit/充值回调接口.md
@@ -15,9 +15,9 @@
 |from_addr |string |发送方地址                                               |
 |addr      |string |接收方地址                                               |
 |txid      |string |交易ID                                                  |
-|amount    |float  |充值数量                                                 |
-|balance   |float  |充值后余额                                               |
-|time      |string |到账时间                                                 |
+|amount    |string |充值数量                                                 |
+|balance   |string |充值后余额                                               |
+|time      |string |到账时间                                                |
 
 **字段值参考上表:**
 
@@ -57,7 +57,7 @@
     "cryptype": 0, 
     "data": {
         "ok": 1,   
-        "msg": "", 
+        "msg": ""
     }
 }
 ```
@@ -75,7 +75,7 @@
 {
     "cryptype": 0,  
     "data": {
-        "eno":  ,  
+        "eno": 0,  
         "emsg": "",
         "data": {}
     }
