--- a/deposit/获取充值记录.md
+++ b/deposit/获取充值记录.md
@@ -48,8 +48,8 @@
 |from_addr             |string |订单发送地址                                                     |
 |addr                  |string |订单接收地址                                                     |
 |txid                  |string |交易ID                                                         |
-|amount                |float  |充值数量                                                        |
-|balance               |float  |充值后余额                                                      |
+|amount                |string  |充值数量                                                        |
+|balance               |string  |充值后余额                                                      |
 |time                  |string |订单生成时间                                                    |
 
 **字段值参考上表:**
@@ -69,8 +69,8 @@
                 "from_addr": "",
                 "addr": "TNMRetGmiBUyNyXBzDDRcmE9LbqS9P7Aje",
                 "txid": "b38a1afd54da6b04289833dd163328586c4cc111b78a450d70b5620eda4cbcd3",
-                "amount": 10000,
-                "balance": 10000,
+                "amount": "10000",
+                "balance": "10000",
                 "time": "2020-02-06 18:14:18"         
             }
         ]
