--- a/withdraw/查询提币工单状态.md
+++ b/withdraw/查询提币工单状态.md
@@ -43,15 +43,15 @@
 |coin                  |string |币名                                                            |
 |from_addr             |string |提币发送地址                                                     |
 |addr                  |string |提币接收地址                                                     |
-|amount                |float  |充值数量                                                        |
-|amount_sent           |float  |实际发送的提币数量=(amount-fee_amount)                           |
-|sub_balance           |float  |扣减余额                                                        |
+|amount                |string |充值数量                                                        |
+|amount_sent           |string |实际发送的提币数量=(amount-fee_amount)                           |
+|sub_balance           |string |扣减余额                                                        |
 |memo                  |string |提币备注，比如用户ID之类的，可以是任意内容                           |
 |status                |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消      |
 |status_desc           |string |状态描述                                                       |
 |txid                  |string |链上的交易ID                                                   |
 |fee_coin              |string |手续费币种                                                     |
-|fee_amount            |float  |手续费数量                                                     |
+|fee_amount            |string |手续费数量                                                     |
 |usertags              |string |用户标签                                                       |
 |time                  |string |订单创建时间                                                   |
 
@@ -70,15 +70,15 @@
             "coin": "",    
             "from_addr": "",
             "addr": "",
-            "amount": 10,           
-            "amount_sent": 9,       
-            "sub_balance": 19,       
+            "amount": "10",           
+            "amount_sent": "9",       
+            "sub_balance": "19",       
             "memo": "",          
             "status": 0,            
             "status_desc": "",
             "txid":  "",
             "fee_coin": "",         
-            "fee_amount": 0,        
+            "fee_amount": "0",        
             "usertags":  "",  
             "time": ""        
         }
