--- a/查询余额.md
+++ b/查询余额.md
@@ -41,12 +41,12 @@
 |emsg                  |string |eno非0时对应下面错误返回列表中的错误描述                        |
 |chain                 |string |主链                                                      |
 |coin                  |string |币名                                                      |
-|balance               |float  |余额数量                                                   |
-|as_cny                |float  |余额以cnc为单位表示的数量                                    |
+|balance               |string |余额数量                                                   |
+|as_cny                |string |余额以cnc为单位表示的数量                                    |
 
-``` json
-字段值参考上表
+**字段值参考上表**
 
+```json
 {
     "cryptype": 0, 
     "data": {
@@ -56,8 +56,8 @@
             {
                 "chain":"eth",
                 "coin": "eth",  
-                "balance": 1,    
-                "as_cny": 7.15,  
+                "balance": "1",    
+                "as_cny": "7.15"
             }
         ]
     }
