--- a/查询币种信息.md
+++ b/查询币种信息.md
@@ -35,15 +35,15 @@
 |chain                 |string |链名                                                      |
 |coin                  |string |币名                                                      |
 |coin_precision        |int    |币的精度,也就是该币支持多少位小数                              |
-|min_deposit_amount    |float  |最小充值数量                                                |
-|min_withdraw_amount   |float  |最小提币数量                                                |
+|min_deposit_amount    |string |最小充值数量                                                |
+|min_withdraw_amount   |string |最小提币数量                                                |
 |deposit_enabled       |int    |充值是否启用: 1=启用,0=未启用                                 |
 |withdraw_enabled      |int    |提币是否启用: 1=启用,0=未启用                                 |
 |deposit_confirm_count |int    |充值入账确认数                                               |
 |fee_coin              |string |手续费币种                                                  |
 |fee_type              |int    |手续费类型: 0=固定数量,1=费率,2=混合(withdraw_amt*rate+amount) |
-|fee_amount            |float  |固定手续费数量                                               |
-|fee_rate              |float  |手续费率                                                    |
+|fee_amount            |string |固定手续费数量                                               |
+|fee_rate              |string |手续费率                                                    |
 |need_memo             |int    |充值是否需要备注: 1=充值需要备注,0=充值不需要备注                 |
 
 **字段值参考上表:**
@@ -59,15 +59,15 @@
                 "chain": "",
                 "coin": "", 
                 "coin_precision": 2, 
-                "min_deposit_amount":0,
-                "min_withdraw_amount": 0,
+                "min_deposit_amount":"0",
+                "min_withdraw_amount": "0",
                 "deposit_enabled": 1,    
                 "withdraw_enabled": 1,   
                 "deposit_confirm_count": 3,
                 "fee_coin": "",   
                 "fee_type": 0,    
-                "fee_amount": 0.1,  
-                "fee_rate": 0.001,
+                "fee_amount": "0.1",  
+                "fee_rate": "0.001",
                 "need_memo": 1 
             }
         ]
