提币添加12001错误码

--- a/withdraw/提币预校验接口.md
+++ b/withdraw/提币预校验接口.md
@@ -76,6 +76,7 @@
 |9001   |(name) not in ip whitelist          |  不受信任的IP地址 |
 |10001  |token verifiy failed                |  token验证失败   |
 |11001  |appid is disabled                   |  appid未启用     |
+|12001  |withdraw sign verifiy failed        |  签名验证失败     |
 |1002   |(name) only support 'list' rule     |  规则定义错误     |
 |2002   |(name) not string                   |  类型不是一个字符串 |
 |3002   |invalid string                      |  非法的字符串     |
