--- a/deposit/获取充值地址.md
+++ b/deposit/获取充值地址.md
@@ -45,7 +45,7 @@
 |coin                  |string |币名                                                            |
 |subuserid             |string |调用端子账号，字符串，平台不管其含义                                 |
 |addr                  |string |充币地址                                                         |
-|needmemo              |int    |0:不需要，1需要，填写的memo字符串格式: "userid|subuserid|appid"     |
+|needmemo              |int    |0:不需要，1需要，填写的memo字符串格式: "userid#subuserid#id"（id是申请的appid序号）|
 
 **字段值参考上表:**
 
