--- a/withdraw/提币回调接口.md
+++ b/withdraw/提币回调接口.md
@@ -14,8 +14,8 @@
 |coin         |string |币名                                                            |
 |from_addr    |string |提币发送地址                                                     |
 |addr         |string |提币接收地址                                                     |
-|amount       |string |充值数量                                                        |
-|amount_sent  |string |实际发送的提币数量=(amount-fee_amount)                           |
+|amount       |string |提币数量                                                        |
+|amount_sent  |string |实际发送的提币数量                                                |
 |sub_balance  |string |扣减余额                                                        |
 |memo         |string |提币备注，比如用户ID之类的，可以是任意内容                           |
 |status       |int    |提币状态: 1=准备发送,2=发送中,3=发送成功,4=发送失败,5=发送已取消      |
