更改签名方式

--- a/withdraw/提交提币工单.md
+++ b/withdraw/提交提币工单.md
@@ -2,20 +2,20 @@
 
 **请求：**
 
-|参数      |类型   |说明                                                               |  
-| --      |--     | --                                                                |
-|appid    |string |用户身份ID, 一个唯一的随机字符串                                       |   
-|cryptype |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0            | 
-|token    |string |md5("appid_salt_userid_timestamp")                                 |
-|timestamp|int    |时间戳,单位秒                                                        |
+|参数      |类型   |说明                                                                 |  
+| --      |--     | --                                                                 |
+|appid    |string |用户身份ID, 一个唯一的随机字符串                                        |   
+|cryptype |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0             | 
+|token    |string |md5("appid_salt_userid_timestamp")                                  |
+|timestamp|int    |时间戳,单位秒                                                         |
 |subuserid|string |调用端子账号，字符串，平台不管其含义                                     |
-|chain    |string |主链                                                                |
-|coin     |string |币名                                                                |
+|chain    |string |主链                                                                 |
+|coin     |string |币名                                                                 |
 |addr     |int    |提币目标地址                                                          |
-|amount   |float  |提币数量                                                             |
+|amount   |float  |提币数量                                                              |
 |memo     |string |用户备注,内容自定义（会记录到区块链上）                                   |
 |usertags |string |用户标签，内容自定义 （不会记录到区块链上）                                |
-|sign     |string |提币请求签名, md5("appid_salt_userid_timestamp_addr_memo_usertags"),注意：如果字段为空，前面的下划线也应该去掉   |
+|sign     |string |提币请求签名, md5("appid_salt_userid_timestamp_addr_memo_usertags")   |
 
 **字段值参考上表:**
 
