--- a/withdraw/提币回调接口.md
+++ b/withdraw/提币回调接口.md
@@ -6,7 +6,7 @@
 | --          |--     | --                                                     |
 |appid        |string |用户身份ID, 一个唯一的随机字符串                            |   
 |cryptype     |int    |0=data未加密(json格式)，1=data已加密(加密字符串)，当前只支持0 | 
-|token        |string |md5("appid_salt_userid_subuserid_timestamp_addr_memo")  |
+|token        |string |md5("appid_salt_userid_subuserid_timestamp_chain_coin_addr_amount_status_memo_usertags")  |
 |timestamp    |int    |时间戳,单位秒                                             |
 |id           |int    |内部充值序号                                                     |
 |subuserid    |string |调用端子账号，字符串，平台不管其含义                                 |
@@ -71,7 +71,7 @@
     "cryptype": 0,  
     "data": {
         "ok": 1,  
-        "msg": "",
+        "msg": ""
     }
 }
 ```
@@ -89,7 +89,7 @@
 {
     "cryptype": 0,  
     "data": {
-        "eno":  ,  
+        "eno": 1001 ,  
         "emsg": "",
         "data": {}
     }
